--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,18 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+addopts = 
+    --strict-markers
+    --strict-config
+    --verbose
+    --tb=short
+    --durations=10
+markers =
+    unit: Unit tests
+    integration: Integration tests
+    slow: Slow running tests
+    security: Security-focused tests
+    api_integration: Real API integration tests (requires valid API key)
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
