--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -239,7 +239,7 @@ jobs:
   api-integration-tests:
     runs-on: ubuntu-latest
     # Only run if the secret is available (typically only on main branch or specific PRs)
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.repository_owner == 'your-username'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.repository_owner == 'KjellKod'
     
     steps:
     - name: Checkout code
