--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -190,7 +190,12 @@ jobs:
     - name: Create test directories (Windows)
       if: runner.os == 'Windows'
       run: |
-        mkdir test_data\intake test_data\jobs test_data\candidates test_data\output
+        # Use PowerShell-friendly directory creation for multiple paths
+        New-Item -ItemType Directory -Force -Path \
+          test_data\intake, \
+          test_data\jobs, \
+          test_data\candidates, \
+          test_data\output | Out-Null
 
     - name: Run core unit tests only
       env:
