--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -189,13 +189,7 @@ jobs:
 
     - name: Create test directories (Windows)
       if: runner.os == 'Windows'
-      run: |
-        # Use PowerShell-friendly directory creation for multiple paths
-        New-Item -ItemType Directory -Force -Path \
-          test_data\intake, \
-          test_data\jobs, \
-          test_data\candidates, \
-          test_data\output | Out-Null
+      run: New-Item -ItemType Directory -Force -Path 'test_data\intake','test_data\jobs','test_data\candidates','test_data\output' | Out-Null
 
     - name: Run core unit tests only
       env:
